# desafio-realcloud

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  app.py  gunicorn.conf.py  pyproject.toml  requirements.txt  routes.py  server.py
backend/models/: users.py
backend/resources/: auth_utils.py  oauth2.py  root.py  users.py
backend/resources/oauth2/: google.py
backend/schemas/: users.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/AuthFeed/: index.jsx
frontend/src/components/DummyBox/: index.jsx
frontend/src/components/Logo/: index.jsx
frontend/src/components/Navbar/: index.jsx
frontend/src/components/SendComment/: index.jsx
frontend/src/components/SpottedCard/: index.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/routes/: index.jsx
frontend/src/routes/EmailSent/: index.jsx
frontend/src/routes/EmailVerified/: index.jsx
frontend/src/routes/Feed/: index.jsx
frontend/src/routes/GoogleCallback/: index.jsx
frontend/src/routes/Landing/: index.jsx
frontend/src/routes/Login/: index.jsx
frontend/src/routes/Logout/: index.jsx
frontend/src/routes/NotFound/: index.jsx
frontend/src/routes/Profile/: index.jsx
frontend/src/routes/SignUp/: index.jsx
frontend/src/services/: Api.jsx
