[tool.poetry]
name = "backend"
version = "1.0.0dev0"
description = "The backend API for the challenge of the RealCloud internship program"
authors = ["Breno Pelegrin <breno.pelegrin@usp.br>"]
license = "GNU GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
Flask = "^3.1.0"
flask-marshmallow = "^1.2.1"
marshmallow-sqlalchemy = "^1.1.0"
flask-sqlalchemy = "^3.1.1"
flask-restful = "^0.3.10"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
